fdo#47164: Increased size of hotspot box for recent documents on Start Center

Prior to patch hotspot and arrow symbol were being controlled by same
rectangle feature. In order to increase hotspot area but leave arrow at
the same size it was necessary to separate the two, creating a second
rectangle to control hotspot size. New rectangle named bInRect, similarly
bSize had to be created.

Change-Id: Iec27d45e1f538dc0185861be7a988b0851fbb352